# metadata-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/models/: __init__.py  orm.py
app/routers/: __init__.py  datasets.py  lineage.py  search.py
app/schemas/: __init__.py  dataset.py
app/services/: __init__.py  dataset_service.py  lineage_service.py  search_service.py
app/utils/: graph.py
tests/: conftest.py  test_datasets.py  test_graph.py  test_lineage.py  test_search.py
